Prevent tooltips from wrapping text

--- a/src/style/SlippyMapTooltip.css
+++ b/src/style/SlippyMapTooltip.css
@@ -17,6 +17,7 @@
   position: relative;
   padding: 14px;
   text-align: left;
+  white-space: nowrap;
 }
 
 .SlippyMapTooltip .close-button {
